--- a/styles.css
+++ b/styles.css
@@ -48,3 +48,20 @@ input[type="submit"] {
 input[type="submit"]:hover {
   background-color: #45a049;
 }
+
+.progress-container {
+  width: 100%;
+  height: 20px;
+  background-color: #f3f3f3;
+  border-radius: 10px;
+  margin-top: 20px;
+  display: none;
+  /* Ocultamos inicialmente */
+}
+
+.progress-bar {
+  width: 0%;
+  height: 100%;
+  background-color: #4CAF50;
+  border-radius: 10px;
+}
